# goit-pyweb-hw-13-task-2

./: .env.example  README.md  compose.yml  pyproject.toml
fpq/: manage.py
fpq/fpq/: asgi.py  settings.py  urls.py  wsgi.py
fpq/fpq_author/: apps.py  forms.py  models.py  urls.py  views.py
fpq/fpq_author/migrations/: 0001_initial.py
fpq/fpq_author/templates/fpq_author/: create.html  detail.html
fpq/fpq_core/: apps.py  forms.py  smtp.py  urls.py  views.py
fpq/fpq_core/templates/fpq_core/: form.html  index.html
fpq/fpq_core/templatetags/: extract_tags.py
fpq/fpq_quote/: apps.py  forms.py  models.py  urls.py  views.py
fpq/fpq_quote/migrations/: 0001_initial.py  0002_quote_quote_of_author.py  0003_alter_quote_phrase.py  0004_alter_quote_phrase.py  0005_quote_tags.py  0006_alter_quote_tags.py  0007_alter_quote_phrase.py
fpq/fpq_quote/templates/fpq_quote/: create.html
fpq/fpq_scraper/: apps.py  urls.py  views.py
fpq/fpq_tag/: apps.py  models.py
fpq/fpq_tag/migrations/: 0001_initial.py  0002_alter_tag_name.py
fpq/fpq_user/: apps.py  forms.py  urls.py  views.py
fpq/fpq_user/templates/fpq_user/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
fpq/utils/: migration.py
